# diffthing

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml
.agents/skills/debug-issue/: SKILL.md
.agents/skills/explore-codebase/: SKILL.md
.agents/skills/refactor-safely/: SKILL.md
.agents/skills/review-changes/: SKILL.md
.changeset/: config.json
.claude/: settings.json
.cursor/rules/: project.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-npm.yml  release-plz.yml
crates/analyzers/: Cargo.toml
crates/analyzers/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: export_typescript.rs
crates/core/src/: assign.rs  fallback.rs  hunk.rs  lib.rs  protocol.rs  reconcile.rs  review.rs  schema.rs  score.rs  validate.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/certs/: README.md  local.diffthing.dev.key  local.diffthing.dev.pem
crates/daemon/src/: config.rs  dispatch.rs  gitio.rs  llm.rs  main.rs  server.rs  session.rs  store.rs  tls.rs  watcher.rs
crates/daemon/tests/: e2e.rs
docs/: ARCHITECTURE.md  LOCAL_DOMAIN.md  SPEC.md
npm/diffthing/: README.md  package.json
scripts/: build-npm-platform.mjs  cert-dev.sh  cert-prod.sh  issue-cert.sh
web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  store.ts  styles.css  vite-env.d.ts
web/src/components/: CommandPalette.tsx  CommentThread.tsx  DiffPane.tsx  FileTreeSection.tsx  Landing.tsx  ReviewChrome.tsx  ReviewContent.tsx  ReviewSidebar.tsx
web/src/libs/: connection.ts  diffRows.ts  fileIcon.ts  highlighter.ts  htbShikiTheme.json  langFromPath.ts  protocol.ts  store.ts  utils.ts
