[workspace]
resolver = "2"
members = ["crates/core", "crates/analyzers", "crates/daemon"]

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
ts-rs = "7.1"
