[package]
name = "diffthing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "diffthing"
path = "src/main.rs"

[dependencies]
diffthing-core = { path = "../core" }
diffthing-analyzers = { path = "../analyzers" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "=4.4.18", features = ["derive"] }
notify = "6.1"
ignore = "=0.4.22"
rand = "0.8"
rust-embed = { version = "8", features = ["debug-embed", "interpolate-folder-path"] }
mime_guess = "2"

toml = "0.8"

# NEXT (see CLAUDE.md):
# rusqlite = { version = "0.31", features = ["bundled"] }   # M1: .diffthing/ persistence
