[package]
name = "diffthing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "diffthing"
path = "src/main.rs"

[dependencies]
diffthing-core = { path = "../core" }
diffthing-analyzers = { path = "../analyzers" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
axum = { version = "0.7", features = ["ws"] }
# TLS for the local.diffthing.dev flow. Pin rustls to the `ring` provider
# (not the default aws-lc-rs) so release cross-compiles need no C toolchain.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
# rustls pinned to the ring provider (not aws-lc-rs) so release cross-compiles
# need no C toolchain.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# Per-install self-signed cert generation (no shared key ships in releases).
# ring-backed for the same no-C-toolchain reason as rustls above.
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
clap = { version = "=4.4.18", features = ["derive"] }
notify = "6.1"
ignore = "=0.4.22"
rand = "0.8"
rust-embed = { version = "8", features = ["debug-embed", "interpolate-folder-path"] }
mime_guess = "2"

toml = "0.8"
# Secure temp dirs for the throwaway git index: unique 0700 dir, no
# predictable PID/timestamp paths (TOCTOU-safe), auto-cleanup on drop.
tempfile = "3"

# .diffthing/ review-state persistence. `bundled` compiles SQLite from source
# so release cross-compiles need no system libsqlite3.
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
# e2e tests dial the real daemon binary over WebSocket.
tokio-tungstenite = "0.21"
futures-util = "0.3"
